--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,16 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  database: hellorails
+  username: waqas
+  passowrd: kanju
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  <<: *default
-  database: hellorails_development
+   <<: *default
+  #password: <%= ENV["HELLORAILS_DATABASE_PASSWORD"] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -37,11 +40,11 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  # host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  # port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,8 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hellorails_test
-
+ 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -81,6 +83,5 @@ test:
 #
 production:
   <<: *default
-  database: hellorails_production
-  username: hellorails
-  password: <%= ENV["HELLORAILS_DATABASE_PASSWORD"] %>
+  #password: <%= ENV["HELLORAILS_DATABASE_PASSWORD"] %>
+  
